--- a/src/CreateTodoButton.css
+++ b/src/CreateTodoButton.css
@@ -1,5 +1,5 @@
 button {
-    position: fixed;
+    position: absolute;
     margin-top: -47px;
     margin-left: calc(100vw - 43px);
     display: flex;
