--- a/src/CreateTaskButton.css
+++ b/src/CreateTaskButton.css
@@ -1,6 +1,7 @@
 button {
     margin: 0;
     padding: 0;
+    margin-top: 10px;
     height: 50px;
     width: 100%;
     border-bottom-left-radius: 5px;
@@ -10,4 +11,5 @@ button {
     font-size: 1.4rem;
     color: #424874;
     font-family: 'Audiowide', cursive;
+    cursor: pointer;
 }
