--- a/src/TaskSearch.css
+++ b/src/TaskSearch.css
@@ -7,6 +7,7 @@ input {
     padding: 0 5px;
     border: 2px solid black;
     border-radius: 7px;
+    margin-bottom: 10px;
 }
 
 @media (max-width: 500px) {
