--- a/src/CreateTaskButton/CreateTaskButton.css
+++ b/src/CreateTaskButton/CreateTaskButton.css
@@ -12,4 +12,10 @@ button {
     color: #424874;
     font-family: 'Audiowide', cursive;
     cursor: pointer;
+    transition: 300ms;
+}
+
+button:hover {
+    color: #A6B1E1;
+    background-color: #424874;
 }
