--- a/src/CreateTaskButton/CreateTaskButton.css
+++ b/src/CreateTaskButton/CreateTaskButton.css
@@ -1,4 +1,4 @@
-button {
+.create-task {
     margin: 0;
     padding: 0;
     margin-top: 10px;
@@ -15,7 +15,7 @@ button {
     transition: 300ms;
 }
 
-button:hover {
+.create-task:hover {
     color: #A6B1E1;
     background-color: #424874;
 }
